--- a/_posts/2018-03-15-융합캡스톤디자인-project1.md
+++ b/_posts/2018-03-15-융합캡스톤디자인-project1.md
@@ -8,4 +8,17 @@ tags:	융합캡스톤디자인 채팅프로그램 암호화
 cover:  "/assets/instacode.png"
 ---
 
-융합캡스톤 디자인 프로젝트
+융합캡스톤 디자인 프로젝트1
+
+첫 번째 프로젝트다. 벤자민은 우리에게 두가지 키워드를 제시했다. Chat와 Encrypted. 메시지를 암호화 한 채팅을 만들라고 
+말하는 듯 하다. 두 클라이언트 간에 채팅 중 메시지 전송시 암호화 되고 받을 때 복호화 되는 일반적인
+채팅방식이 머릿 속에 빠르게 떠올랐지만 너무 식상한 것 같아서 다른 아이디어를 생각했다. 다 같이 모여서 하는 다중 채팅에서
+서로 맺어진 사람들만 올바른 문장을 볼 수 있고 다른 사람은 암호화된, 혹은 의미 없는 문장을 보는 것이다. 나는 팀원들에게
+의견을 제시했고 긍정적인 반응을 얻어 이대로 하기로 하였다.
+
+Frontend는 HTML과 CSS, Javascript로 간단하게 구성하고 Backend는 Node.js + Socket.io를 사용하기로 하였다.
+그 배경엔 팀원들의 능력으로 3주의 짧은 시간동안 큰 부담 없이 진행 할 수 있는 난이도라고 생각했기 때문이다. 한명은 HTML을 가르치고
+한명은 Node.js를 알려주고 있다. 허접한 실력이지만 원활한 진행을 위해 내가 몸으로 터득했던 팁 정도를 알려주는 정도. 모두가 즐겁고 성취감 있게 해낸다면 더할나위 없을 것 같다.
+
+![image](/assets/20180314-image1.jpg)
+회의 동안 나오는 이야기를 휘갈겨 본 A4 이면지 뒷장.
