--- a/_posts/2018-03-15-융합캡스톤디자인-project1.md
+++ b/_posts/2018-03-15-융합캡스톤디자인-project1.md
@@ -18,7 +18,9 @@ cover:  "/assets/instacode.png"
 
 Frontend는 HTML과 CSS, Javascript로 간단하게 구성하고 Backend는 Node.js + Socket.io를 사용하기로 하였다.
 그 배경엔 팀원들의 능력으로 3주의 짧은 시간동안 큰 부담 없이 진행 할 수 있는 난이도라고 생각했기 때문이다. 한명은 HTML을 가르치고
-한명은 Node.js를 알려주고 있다. 허접한 실력이지만 원활한 진행을 위해 내가 몸으로 터득했던 팁 정도를 알려주는 정도. 모두가 즐겁고 성취감 있게 해낸다면 더할나위 없을 것 같다.
+한명은 Node.js를 알려주고 있다. 허접한 실력이지만 원활한 진행을 위해 내가 몸으로 터득했던 팁 정도를 알려주는 정도. 
+
+모두가 즐겁고 성취감 있게 해낸다면 더할나위 없을 것 같다.
 
 ![image](/assets/20180314-image1.jpg)
 회의 동안 나오는 이야기를 휘갈겨 본 A4 이면지 뒷장.
