--- a/_posts/2018-03-15-융합캡스톤디자인-project1.md
+++ b/_posts/2018-03-15-융합캡스톤디자인-project1.md
@@ -22,9 +22,9 @@ Frontend는 HTML과 CSS, Javascript로 간단하게 구성하고 Backend는 Node
 데이터베이스는 굳이 사용하지 않아도 될 것 같다. 따로 저장할 데이터가 없을 것이기 때문이다.
 
 ![image](/assets/20180314-image1.jpg)
-회의 동안 나오는 이야기를 휘갈겨 본 A4 이면지 뒷장.
+_회의 동안 나오는 이야기를 휘갈겨 본 A4 이면지 뒷장._
 
-정리해보면 다음과 같은 요구사항이 필요했다.
+**정리해보면 다음과 같은 요구사항이 필요하다.**
 
 1. 채팅방 개설 ( 유일함 )
 2. 채팅방에 각자 입장
@@ -35,5 +35,15 @@ Frontend는 HTML과 CSS, Javascript로 간단하게 구성하고 Backend는 Node
 7. 대화 하고 싶은 사람 선택한다
 8. 내가 선택한 사람에게만 올바른 텍스트 보냄
 9. 선택하지 않은 사람에게는 의미없는 텍스트 보냄
+
+이렇게 정리하고 보니 멀티 채팅과 선택한 사람과 올바른 채팅을 하는 기능(암호화된 채팅?)이 핵심이 될 것 같다. 일단 채팅 기능부터 만들고 암호화를 만들어야겠다. 
+
+![image](/assets/20180316-image2.png)
+
+**Socket.io**
+
+HTML5 에서 소개 된 Websocket을 쉽게 사용해 개발 할 수 있도록 만들어진 Node.js 모듈이다. Socket.io 에서는 참여자 모두에게 메시지를 보낼 수 있는 broadcast 기능과 채팅 방 개념으로 방을 나누어서 접속자를 참여 시킬 수 있는 Room 기능이 있다. 덕분에 이번 프로젝트에서 쉽고 빠르게 퀄리티 높은 작품을 만들 수 있을 것 같다.
+
+### 끝으로
 
 모두가 즐겁고 성취감 있게 해낸다면 더할나위 없을 것 같다.
