--- a/_posts/2018-03-19-융합캡스톤디자인-project1-2.markdown
+++ b/_posts/2018-03-19-융합캡스톤디자인-project1-2.markdown
@@ -10,7 +10,7 @@ cover:  "/assets/instacode.png"
 
 ### 한 것들
 
-며칠 전 결정한 컨셉과 요구사항을 가지고 backend 를 제작하고 있다. 어느정도 모양이 나오고 있다.
+며칠 전 결정한 컨셉과 요구사항을 가지고 backend 제작중. 프론트 엔드는 어느정도 모양이 나오고 있다.
 
 ### 개발 과정
 
