--- a/_posts/2018-03-24-융합캡스톤디자인-project1-3.markdown
+++ b/_posts/2018-03-24-융합캡스톤디자인-project1-3.markdown
@@ -67,3 +67,114 @@ _이 코드만 있으면 되는 건 아니다. 핵심만 추려낸 것이다._
 
 ### 비밀 채팅 구현
 
+비밀 채팅을 위해서 몇 가지 준비를 마쳤다. 그리고 이제 본격적인 기능들을 구현할 차례이다. 저번 포스트에 게시한 것 같지만 채팅 시스템 진행 과정을 다시 되짚어 보았다.
+
+1. 사용자 접속(채팅을 볼 수만 있음)
+2. 사용자 닉네임 설정(이제 채팅이 가능함)
+3. 닉네임은 변경 가능(중복은 안됨)
+4. 채팅 메시지 전송 시 페이지 접속자 전부에게 broadcast(의미없는 글로 보임)
+5. 내가 말하고 싶은 상대방을 toggle 후 채팅을 보내면 그 상대방에겐 제대로 된 글이 보임
+
+이게 전부다. 사용자 접속여부는 세션을 부여하면 될 것이고, 닉네임 설정과 닉네임 변경은 세션 스토어에 잘 저장해 사용하면 될 것이다. 채팅 메시지 전송은 `socket.io` 의 도움을 받아 쉽게 구현할 수 있을 것이다. 문제는 내가 선택한 상대방에게만 제대로 된 글이 보이는 기능인데, 지금 와서 생각해보면 별 것 아니지만 효율적으로 구현하고 싶어서 시간을 많이 할애했다(강제적으로).
+
+{% highlight javascript %}
+socket.on('secret', name => {
+    store.get(sessionID, (err, sess) => {
+      if (sess.username === name) {
+        console.log('overlaped')
+      } else {
+        const secret = new Set(sess.secret)
+        
+        store.all((err, sessions) => {
+          sessions.map(sdata => {
+            if (sdata && sdata.username === name) {
+              secret.add({ username: name, sid: sdata.id, io: sdata.io })
+              sess.secret = secret
+              store.set(sessionID, sess, err => {
+                io.to(sessionID).emit('secret', name)
+                console.log(sess)
+              })
+            }
+          })
+        })
+      }
+    })
+  })
+  socket.on('secretRemove', name => {
+    store.get(sessionID, (err, sess) => {
+      console.log(sess)
+      const secret = new Set(sess.secret)
+      secret.delete(name)
+      secret.clear()
+      sess.secret = secret
+      console.log(sess)
+      store.set(sessionID, sess, err => {
+        io.to(sessionID).emit('secretRemove', name)
+      })
+    })
+  })
+{% endhighlight %}
+
+채팅 참여자가 toggle로 선택한 사람의 정보를 기억하는 부분이다. toggle on 이 되면 secret 이 되고 toggle off 가 되면 secretRemove가 된다. Set 자료형으로 저장 하면 중복체크도 자동으로 될 것이라고 생각해서 사용했는데 session store 에서 Set 자료형을 못 받아들이는 문제가 있어서 애를 먹었다.
+
+
+{% highlight javascript %}
+socket.on('chat', message => {
+  console.log(message)
+  store.get(sessionID, (err, sess) => {
+    if (sess && sess.active) {
+      const secret = new Set(sess.secret)
+      const time = Date.now()
+      store.all((err, sessions) => {
+        sessions
+          .filter(sdata => {
+            if (!sdata.active) {
+              chat.connected[sdata.io].emit(
+                'cypher',
+                sess.username,
+                'tomb',
+                time
+              ) 
+              return false // meaningless
+            } else {
+              return true // participants
+            }
+          })
+          .map(sdata => {
+            if (_.some(Array.from(secret), { username: sdata.username })) {
+              chat.connected[sdata.io].emit(
+                'plain',
+                sess.username,
+                message,
+                time
+              ) // plain text
+            } else if (sessionID === sdata.id) {
+              chat.connected[sdata.io].emit(
+                'plain',
+                sess.username,
+                message,
+                time
+              ) // plain text
+            } else {
+              chat.connected[sdata.io].emit(
+                'cypher',
+                sess.username,
+                'garbage',
+                time
+              ) // meaningless
+            }
+          })
+      })
+    }
+  })
+})
+{% endhighlight %}
+
+가장 고심했던 부분인데 채팅 시 planetext 와 cyphertext 를 걸러서 보내주는 부분이다. 접속자 전부를 filter 로 단순 접속자를 걸러내서 cyphertext 를 보내고, 나머지 사람들을 toggle 여부에 따라서 걸러내 전송한다. 중간에 `Lodash` 라이브러리를 사용해서 쉽게 처리한 부분도 있다. 정말 편한 라이브러리인 것 같다.
+
+이 코드가 문제가 좀 있는데 유저가 재접속 시 websocket 세션이 초기화 되어서 비밀 채팅이 먹히지 않는 문제가 있는데 해결하지 않고 넘어가려고 한다. 이번 프로젝트는 팀원이 모두 참여해 맛을 보는 느낌으로 끝내고, 다음 프로젝트부터는 더 완성도 있는 결과물을 만들어볼 것이다.
+
+### 최종 결과물
+
+![](/assets/ben1-result1.png)
+![](/assets/ben1-result2.png)
