--- a/_posts/2018-03-24-융합캡스톤디자인-project1-3.markdown
+++ b/_posts/2018-03-24-융합캡스톤디자인-project1-3.markdown
@@ -29,7 +29,7 @@ nginx 웹서버를 reverse proxy로 앞 단에 두어 들어오는 요청을 처
 ![image](/assets/ben1-packet1.png)
 _요청과 응답을 암호화 하지 않으면 이런 식으로 패킷 내용을 그대로 볼 수 있게 된다._
 
-이 훌륭한 방식을 내 서버에 적용 하려면 해야할 것이 몇 가지 있다. 서버에서 사용할 인증서와, 서버와 클라이언트를 중간에서 보증해줄 인증기관의 인증서가 필요하다. 일단 서버 도메인이 필요하고 인증기관에서 발급을 받아야 한다. 이번엔 openssl을 사용해 self signed certification 즉 자기 서명을 사용한다. 내가 인증기관이 되는 것이다. 이렇게 하면 브라우저에서 접속할 때 위험한 사이트라면서 빼애액 거린다. 무시하고 접속하면 된다.
+이 훌륭한 방식을 내 서버에 적용 하려면 해야할 것이 몇 가지 있다. 서버에서 사용할 인증서와, 서버와 클라이언트를 중간에서 보증해줄 인증기관의 인증서가 필요하다. 일단 서버 도메인이 필요하고 인증기관에서 인증서를 발급을 받아야 한다. 이번엔 openssl을 사용해 self signed certification 즉 자기 서명을 사용한다. 내가 인증기관이 되는 것이다. 이렇게 하면 브라우저에서 접속할 때 위험한 사이트라면서 빼애액 거린다. 무시하고 접속하면 된다.
 
 ![image](/assets/ben1-browser1.png)
 _`고급`을 누르면 접속할 수 있는 옵션이 나온다. (firefox를 이용 하였음)_
