--- a/_posts/2018-03-24-융합캡스톤디자인-project1-3.markdown
+++ b/_posts/2018-03-24-융합캡스톤디자인-project1-3.markdown
@@ -14,7 +14,7 @@ cover:  "/assets/instacode.png"
 
 ### 기존 채팅의 문제점
 
-우리 채팅의 컨셉은 저번에 설명 했듯이 **'다 같이 모여서 하는 채팅이지만 선택한 사람에게만 제대로 보이는 채팅'** 이었다. 그 컨셉을 구현하는 건 논리를 만들고 그대로 구현하면 될 일이었다. 클라이언트의 닉네임이나 다른 정보들은 세션을 이용 하므로 서버에 저장될 것이기 때문에 문제가 없을 것이라고 생각했다. 그러나 못된 해커가 클라이언트를 공격해 중간에 패킷을 가로챈다면 비밀 채팅이 무용지물이 될 것이 분명했다. 그 생각이 미치자 나는 그러한 공격을 방지하기 위하여 최근에 이리저리 살펴보던 TLS(https) 프로토콜을 붙여보자고 팀원들에게 제시하였다.
+우리 채팅의 컨셉은 저번에 설명 했듯이 **'다 같이 모여서 하는 채팅이지만 선택한 사람에게만 제대로 보이는 채팅'** 이었다. 그 컨`셉을 구현하는 건 논리를 만들고 그대로 구현하면 될 일이었다. 클라이언트의 닉네임이나 다른 정보들은 세션을 이용 하므로 서버에 저장될 것이기 때문에 문제가 없을 것이라고 생각했다. 그러나 못된 해커가 클라이언트를 공격해 중간에 패킷을 가로챈다면 비밀 채팅이 무용지물이 될 것이 분명했다. 그 생각이 미치자 나는 그러한 공격을 방지하기 위하여 최근에 이리저리 살펴보던 TLS(https) 프로토콜을 붙여보자고 팀원들에게 제시하였다.
 
 ### 채팅 보안 전략
 
